# ion-rust

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  build.rs  clean-rebuild.ps1  clean-rebuild.sh  notes.md  profile.json
.github/: codecov.yml
.github/workflows/: coverage.yml  miri.yml  rust.yml
benches/: byod.rs  encoding_primitives.rs  read_many_structs.rs  read_text_single_struct.rs  var_uint_experiment.rs  write_many_structs.rs
examples/: lazy_read_all_values.rs  read_all_values.rs  write_log_events.rs
ion-c-sys/: Cargo.toml  README.md  bindings.h  build.rs
ion-c-sys-macros/: Cargo.toml  README.md
ion-c-sys-macros/src/: lib.rs
ion-c-sys/src/: decimal.rs  int.rs  lib.rs  reader.rs  result.rs  string.rs  timestamp.rs  writer.rs
ion-c-sys/tests/: value.rs
ion-hash/: Cargo.toml  README.md
ion-hash/src/: element_hasher.rs  lib.rs  representation.rs  type_qualifier.rs
ion-hash/tests/: ion_hash_tests.ion  ion_hash_tests.rs
ion-rs-ffi/: .gitignore  Cargo.toml  README.md  cbindgen.toml
ion-rs-ffi/src/: lib.rs
ion-rs-ffi/tests/: ion_ffi_tests.rs
ionc-sys/: Cargo.toml  build.rs
ionc-sys/src/: lib.rs
src/: agnostic_reader.rs  blocking_reader.rs  catalog.rs  constants.rs  cursor.rs  data_source.rs  ion_eq.rs  ion_reader.rs  ion_writer.rs  lib.rs  location.rs  position.rs  raw_reader.rs  raw_symbol_ref.rs  raw_symbol_token.rs  raw_symbol_token_ref.rs  raw_writer.rs  read_config.rs  reader.rs  result.rs  shared_symbol_table.rs  stream_reader.rs  symbol.rs  symbol_ref.rs  symbol_table.rs  symboltable.rs  system_event_handler.rs  system_event_handling_code.rs  system_reader.rs  thunk.rs  unsafe_helpers.rs  write_config.rs  writer.rs
src/binary/: binary_writer.rs  constants.rs  cursor.rs  decimal.rs  header.rs  int.rs  mod.rs  nibbles.rs  raw_binary_reader.rs  raw_binary_writer.rs  timestamp.rs  type_code.rs  uint.rs  var_int.rs  var_uint.rs  writer.rs
src/binary/non_blocking/: binary_buffer.rs  mod.rs  raw_binary_reader.rs  type_descriptor.rs
src/element/: annotations.rs  builders.rs  bytes.rs  element_stream_reader.rs  element_stream_writer.rs  element_writer.rs  iterators.rs  list.rs  lob.rs  mod.rs  native_writer.rs  owned.rs  reader.rs  sequence.rs  sexp.rs  struct.rs  writer.rs
src/ion_data/: ion_data_hash.rs  ion_eq.rs  ion_ord.rs  mod.rs
src/ion_hash/: element_hasher.rs  mod.rs  representation.rs  type_qualifier.rs
src/lazy/: any_encoding.rs  bytes_ref.rs  decoder.rs  encoder.rs  encoding.rs  format.rs  lazy_reader.rs  lazy_system_reader.rs  lazy_value_cache.rs  mod.rs  never.rs  raw_stream_item.rs  raw_value_ref.rs  reader.rs  sequence.rs  span.rs  str_ref.rs  streaming_raw_reader.rs  struct.rs  system_reader.rs  system_stream_item.rs  value.rs  value_ref.rs
src/lazy/binary/: binary_buffer.rs  encoded_value.rs  encoding.rs  format.rs  immutable_buffer.rs  lazy_raw_reader.rs  lazy_reader.rs  lazy_system_reader.rs  mod.rs  test_utilities.rs
src/lazy/binary/raw/: annotations_iterator.rs  lazy_raw_reader.rs  lazy_raw_sequence.rs  lazy_raw_struct.rs  lazy_raw_value.rs  mod.rs  nibbles.rs  raw_annotations_iterator.rs  reader.rs  sequence.rs  struct.rs  type_descriptor.rs  value.rs
src/lazy/binary/system/: lazy_sequence.rs  lazy_struct.rs  lazy_system_reader.rs  lazy_value.rs  mod.rs
src/lazy/encoder/: annotate.rs  annotation_seq.rs  container_fn.rs  mod.rs  value_writer.rs  value_writer_config.rs  write_as_ion.rs  writer.rs
src/lazy/expanded/: compiler.rs  e_expression.rs  encoding_module.rs  lazy_element.rs  macro_evaluator.rs  macro_table.rs  mod.rs  saved_value.rs  sequence.rs  stack.rs  struct.rs  tdl_macro.rs  template.rs
src/lazy/text/: as_utf8.rs  buffer.rs  encoded_value.rs  matched.rs  mod.rs  parse_result.rs  token_kind.rs  value.rs
src/lazy_reader/: lazy_reader.rs  lazy_system_reader.rs  mod.rs  raw_stream_item.rs  raw_value_ref.rs  system_reader.rs  system_stream_item.rs  value_ref.rs
src/lazy_reader/binary/: immutable_buffer.rs  lazy_raw_reader.rs
src/result/: conversion.rs  decoding_error.rs  encoding_error.rs  illegal_operation.rs  incomplete.rs  io_error.rs  mod.rs  position.rs
src/serde/: datetime.rs  de.rs  decimal.rs  mod.rs  ser.rs  timestamp.rs
src/text/: encoder.rs  ion_data_source.rs  mod.rs  parent_container.rs  parent_level.rs  parse_result.rs  raw_text_reader.rs  raw_text_writer.rs  reader.rs  text_buffer.rs  text_data_source.rs  text_formatter.rs  text_value.rs  text_writer.rs  whitespace_config.rs  writer.rs
src/text/non_blocking/: mod.rs  raw_text_reader.rs  text_buffer.rs
src/text/parsers/: annotations.rs  blob.rs  boolean.rs  clob.rs  comments.rs  containers.rs  decimal.rs  float.rs  integer.rs  mod.rs  null.rs  numeric_support.rs  stream_item.rs  string.rs  symbol.rs  text_support.rs  timestamp.rs  top_level.rs  value.rs
src/tokens/: mod.rs  reader_stream.rs  stream_reader.rs
src/types/: bool.rs  bytes.rs  coefficient.rs  decimal.rs  float.rs  int_data.rs  integer.rs  iterators.rs  list.rs  lob.rs  magnitude.rs  mod.rs  null.rs  sequence.rs  sexp.rs  string.rs  struct.rs  symbol.rs  timestamp.rs  type.rs
src/types/decimal/: coefficient.rs  magnitude.rs  mod.rs
src/types/integer/: big_small.rs  int_data.rs  mod.rs
src/value/: borrowed.rs  builders.rs  dumper.rs  element_stream_reader.rs  ion_c_reader.rs  ion_c_writer.rs  iterators.rs  loader.rs  mod.rs  native_reader.rs  native_writer.rs  owned.rs  raw_element_reader.rs  reader.rs  sym.rs  writer.rs
tests/: conformance.rs  conformance_tests.rs  detect_incomplete_text.rs  element_display.rs  element_ion_tests.rs  element_test_vectors.rs  good.rs  good_test_vectors.rs  ion_data_consistency.rs  ion_hash_tests.rs  ion_tests_1_1.rs  lazy_element_ion_tests.rs  loader_test_vectors.rs  non_blocking_element_tests.rs  reexport.rs  reexport_external.rs  token_element_ion_tests.rs
tests/conformance_dsl/: clause.rs  context.rs  continuation.rs  document.rs  fragment.rs  mod.rs  model.rs
tests/ion_tests/: detect_incomplete_text.rs  lazy_element_ion_tests.rs  mod.rs
(+41 files in other folders)
