[package]
name = "ion-rs"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Implementation of Amazon Ion"
homepage = "https://github.com/amazon-ion/ion-rust"
repository = "https://github.com/amazon-ion/ion-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "parser", "json", "format", "serde"]
categories = ["encoding", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
  "**/.travis.yml",
  "**/.appveyor.yml",
  "**/ion-tests/iontestdata/**",
  "*.pdf"
]
version = "0.18.1"
edition = "2021"
# We need at least 1.65 for GATs
# https://blog.rust-lang.org/2022/11/03/Rust-1.65.0.html
rust-version = "1.65"

[workspace]
members = [
  "ion-hash"
]

[features]
default = []
ion-hash = ["digest"]

# Feature for indicating particularly bleeding edge APIs or functionality in the library.
# These are not guaranteed any sort of API stability and may also have non-standard
# Ion behavior (e.g., draft Ion 1.1 capabilities).
experimental = ["experimental-streaming", "experimental-reader", "experimental-lazy-reader"]

# Experimental streaming APIs
experimental-streaming = []

# Access to the `IonReader` trait, its implementations, and the `ReaderBuilder` requires enabling this feature.
# These APIs are functional and well-tested, but are not yet stable.
experimental-reader = []

# A reader API that parks on a top-level value and yields 'lazy' handles to the data
# contained therein. These lazy handles can be read multiple times, allowing for
# an inexpensive form of 'rewind' functionality.
experimental-lazy-reader = []

[dependencies]
base64 = "0.12"
bigdecimal = "0.3.0"
bytes = "0.4"
# chrono < 0.5 brings in a deprecated version of the `time` crate via `oldtime` feature by default
# this makes it explicitly not do this as there is an advisory warning against this:
# See: https://github.com/chronotope/chrono/issues/602
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
delegate = "0.9.0"
thiserror = "1.0"
nom = "7.1.1"
num-bigint = "0.4.3"
num-integer = "0.1.44"
num-traits = "0.2"
arrayvec = "0.7"
smallvec = "1.9.0"
digest = { version = "0.9", optional = true }
sha2 = { version = "0.9", optional = true }

[dev-dependencies]
rstest = "0.17.0"
rstest_reuse = "0.5.0"
# Used by ion-tests integration
walkdir = "2.3"
test-generator = "0.3"
memmap = "0.7.0"

[profile.release]
lto = true
codegen-units = 1
