[package]
name = "ion-c-sys-macros"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Macros used to implement ion-c-sys"
homepage = "https://github.com/amzn/ion-rust"
repository = "https://github.com/amzn/ion-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "parser", "json", "format", "serde"]
categories = ["encoding", "parser-implementations"]
exclude = [
  "**/.git/**",
  "**/.github/**",
]
version = "0.1.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.72", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.26"
