[package]
name = "ion-c-sys"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Bindings to Amazon Ion C"
homepage = "https://github.com/amzn/ion-rust"
repository = "https://github.com/amzn/ion-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "parser", "json", "format", "serde"]
categories = ["encoding", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
    "**/ion-tests/iontestdata/**",
    "*.pdf"
]
version = "0.4.3"
edition = "2018"

[dependencies]
paste = "1.0.0"
num-bigint = "0.3.0"
bigdecimal = "0.2.0"
chrono = "0.4.13"

[build-dependencies]
cmake = "0.1.44"
bindgen = "0.54.0"

[dev-dependencies]
rstest = "0.6.4"
rstest_reuse = "0.1.0"
