[package]
name = "ion-c-sys"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Bindings to Amazon Ion C"
homepage = "https://github.com/amzn/ion-rust"
repository = "https://github.com/amzn/ion-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "parser", "json", "format", "serde"]
categories = ["encoding", "parser-implementations"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
    "**/ion-tests/iontestdata/**",
    "*.pdf"
]
version = "0.4.13"
edition = "2021"

[dependencies]
ion-c-sys-macros = { version = "0.1", path = "../ion-c-sys-macros" }
paste = "1.0"
num-bigint = "0.3"
bigdecimal = "0.2"
chrono = "0.4"

[build-dependencies]
cmake = "0.1"
bindgen = "0.59.2"

[dev-dependencies]
rstest = "0.9"
rstest_reuse = "0.1"
