[package]
name = "ion-hash"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Ion Hash"
homepage = "https://github.com/amzn/ion-rust"
repository = "https://github.com/amzn/ion-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "parser", "json", "format", "hash"]
categories = ["encoding", "parser-implementations", "cryptography"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
    "**/ion-tests/iontestdata/**",
    "*.pdf"
]
version = "0.0.9"
edition = "2021"

[dependencies]
ion-rs = {version = "0.13", features = ["ion_c"]}
ion-c-sys = "0.4"
num-bigint = "0.3"
digest = "0.9"
sha2 = "0.9"
