[package]
name = "ion-hash"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Ion Hash"
homepage = "https://github.com/amazon-ion/ion-rust"
repository = "https://github.com/amazon-ion/ion-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "parser", "json", "format", "hash"]
categories = ["encoding", "parser-implementations", "cryptography"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
    "**/ion-tests/iontestdata/**",
    "*.pdf"
]
version = "0.1.0"
edition = "2021"
# We need at least 1.65 for GATs
# https://blog.rust-lang.org/2022/11/03/Rust-1.65.0.html
rust-version = "1.65"

[dependencies]
ion-rs = { path="..", version = "0.15" }
num-bigint = "0.4.3"
digest = "0.9"
sha2 = "0.9"
thiserror = "1.0"
