[package]
name = "ion-hash"
authors = ["Amazon Ion Team <ion-team@amazon.com>"]
description = "Ion Hash"
homepage = "https://github.com/amazon-ion/ion-rust"
repository = "https://github.com/amazon-ion/ion-rust"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ion", "parser", "json", "format", "hash"]
categories = ["encoding", "parser-implementations", "cryptography"]
exclude = [
    "**/.git/**",
    "**/.github/**",
    "**/.travis.yml",
    "**/.appveyor.yml",
    "**/ion-tests/iontestdata/**",
    "*.pdf"
]
version = "0.1.1"
edition = "2021"
# We need at least 1.65 for GATs
# https://blog.rust-lang.org/2022/11/03/Rust-1.65.0.html
rust-version = "1.65"

[dependencies]
